--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>夏威夷旅遊租借</title>
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="Shadows_Into_Light/ShadowsIntoLight-Regular.ttf">
-    <link rel="stylesheet" href="/20231025.css">
+    <link rel="stylesheet" href="./20231025.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="images/black logo.svg" alt="" class="img">
+            <img src="./images/black logo.svg" alt="" class="img">
             <h1>夏威夷旅遊租借服務</h1>
         </div>
         <nav>
