--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/index.html">首頁</a></li>
+                <li><a href="./index.html">首頁</a></li>
                 <li><a href="/20231025-1.html">關於我們</a></li>
                 <li><a href="/20231025-2.html">會員登入</a></li>
                 <li><a href="/20231025-3.html">聯絡我們</a></li>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="images/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="">
+                        <img src=".images/sean-o-KMn4VEeEPR8-unsplash.jpg" alt="">
                     </div>
                     
                     <h4>付款方便</h4>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="card">
                     <div class="img-container">
-                        <img src="images/tatonomusic-FFCgotROOTY-unsplash.jpg" alt="">
+                        <img src=".images/tatonomusic-FFCgotROOTY-unsplash.jpg" alt="">
                     </div>
                     
                     <h4>種類多樣</h4>
@@ -70,7 +70,7 @@
     </main>
     <footer>
         <div class="logo">
-            <img src="images/black logo.svg" alt="logo">
+            <img src=".images/black logo.svg" alt="logo">
             <h1>夏威夷旅遊租借服務</h1>
         </div>
         <nav>
@@ -82,10 +82,10 @@
             </ul>
         </nav>
         <section class="links">
-            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg" alt="FB"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" alt="IG"></a>
-            <a href="https://twitter.com/home?lang=zh-Hant" target="_blank"><img src="images/twitter.svg" alt="TW"></a>
-            <a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.svg" alt="YT"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.svg" alt="FB"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.svg" alt="IG"></a>
+            <a href="https://twitter.com/home?lang=zh-Hant" target="_blank"><img src="./images/twitter.svg" alt="TW"></a>
+            <a href="https://www.youtube.com/" target="_blank"><img src="./images/youtube.svg" alt="YT"></a>
         </section>
     </footer>
 </body>
